<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constraintLayout">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="280dp" app:srcCompat="@drawable/popular_healthy_foods"
            android:id="@+id/mainImg"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="TODO"/>
    <Button
            android:text="@string/find_recipes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/recipeBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/mainImg" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.183"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            style="@style/Widget.AppCompat.Button.Colored" android:background="@color/design_default_color_primary"
            android:textColor="@android:color/white"/>
    <Button
            android:text="@string/shopping_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/shoppingListBtn"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mainImg"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.614" style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/design_default_color_primary" android:textColor="@android:color/white"/>
    <Button
            android:text="@string/my_recipes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/myRecipesBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/mainImg" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.403"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            style="@style/Widget.AppCompat.Button.Colored" android:background="@color/design_default_color_primary"
            android:textColor="@android:color/white"/>
    <Button
            android:text="@string/educational_references"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/educationalReferencesBtn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mainImg"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.826"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            style="@style/Widget.AppCompat.Button.Colored" android:background="@color/design_default_color_primary"
            android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>